@@ -269,6 +269,8 @@ struct cobc_mem_struct {
 	void			*memptr;
 	size_t			memlen;
 };
+#define COBC_MEM_SIZE ((sizeof(struct cobc_mem_struct) + sizeof(long long) - 1) \
+						/ sizeof(long long)) * sizeof(long long)  
 
 /* Type of name to check in cobc_check_valid_name */
 enum cobc_name_type {
